Functional and styled. Progress bar added

--- a/public/index.html
+++ b/public/index.html
@@ -23,44 +23,57 @@
     <link rel="icon" href="/favicon.ico" />
     <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
 
   <body>
     <div class="player__wrapper">
-      <button
-        class="ab__button"
-        id="a__button"
-        onclick="playSoundA()"
-        disabled="true"
-      >
-        A
-      </button>
-      <button
-        class="play__pause__button"
-        id="play__button"
-        onclick="playSoundA()"
-        disabled="true"
-      >
-        Play
-      </button>
-      <button
-        class="play__pause__button"
-        id="stop__button"
-        onclick="stopSounds()"
-        disabled="true"
-      >
-        Stop
-      </button>
-      <button
-        class="ab__button"
-        id="b__button"
-        onclick="playSoundB()"
-        disabled="true"
-      >
-        B
-      </button>
+      <div class="progress__container" id="progress">
+        <div class="progress__bar" id="progress__fill"></div>
+      </div>
+      <div class="controls">
+        <button
+          class="ab__button"
+          id="a__button"
+          onclick="playSoundA()"
+          disabled="true"
+        >
+          A
+        </button>
+        <button
+          class="play__pause__button"
+          id="play__button"
+          onclick="playPause()"
+          disabled="true"
+        >
+          <i class="fa-solid fa-play"></i>
+        </button>
+        <button
+          class="ab__button"
+          id="b__button"
+          onclick="playSoundB()"
+          disabled="true"
+        >
+          B
+        </button>
+      </div>
+      <div class="center__stop">
+        <button
+          class="play__pause__button"
+          id="stop__button"
+          onclick="stopSounds()"
+          disabled="true"
+        >
+          <i class="fa-solid fa-stop"></i>
+        </button>
+      </div>
     </div>
     <script src="./js/ab-player.js"></script>
   </body>
