--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         A zero-dependency HTML, CSS, Javascript audio player.
       </div>
 
-      <a href=""><i class="fa-brands fa-github"></i> Open Source on GitHub</a>
+      <a href="https://github.com/mattbartley/AB-Audio-Player" target="_blank"><i class="fa-brands fa-github"></i> Open Source on GitHub</a>
       <p>Toggle between two audio files to compare them side-by-side.</p>
     </div>
     <div class="player__wrapper">
